--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Ignore the raw Robin Hood text
+data/raw_data/robin_hood.txt
+
+# Ignore the cleaned CSV lemmas
+data/clean_data/robin_lemmas.csv
